# GameEngine

./: CMakeLists.txt
.github/workflows/: clang-format-checker.yml  linux-build.yml  windows-build.yml
Automation/CMAKE/: CMakeHelpers.cmake
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h
